k8s/base/tasks-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tasks-api
  namespace: default
  labels:
    app: tasks-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tasks-api

  template:
    metadata:
      labels:
        app: tasks-api
        azure.workload.identity/use: "true"

    spec:
      serviceAccountName: tasks-api

      tolerations:
        - key: CriticalAddonsOnly
          operator: Exists
          effect: NoSchedule

      containers:
        - name: tasks-api

          image: project3ruoxiacr.azurecr.io/tasks-api:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"


          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20

      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: tasks-api-secrets
