k8s/base/tasks-api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tasks-api
  namespace: ${K8S_NAMESPACE}
  labels:
    app: tasks-api

spec:
  type: ClusterIP

  selector:
    app: tasks-api

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
