k8s/base/tasks-api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: tasks-api-http-redirect
  namespace: default

spec:
  hostnames:
    - ${TASKS_API_HOSTNAME}

  parentRefs:
    - name: tasks-api-gateway
      sectionName: http

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: tasks-api-route
  namespace: default

spec:
  hostnames:
    - ${TASKS_API_HOSTNAME}

  parentRefs:
    - name: tasks-api-gateway
      sectionName: https

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /tasks

      backendRefs:
        - name: tasks-api
          port: 8000

    - matches:
        - path:
            type: PathPrefix
            value: /metrics
      backendRefs:
        - name: tasks-api
          port: 8000
